--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend course</title>
-</head>
-<body>
-  <h1>Frontend</h1>
-  <a href="./lessons/lesson_06/index.html">Lesson 06</a>
 
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <!-- картинка иконка которую мы видим во вкладке браузера -->
+    <link rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌿</text></svg>">
+
+    <title>Frontend course</title>
+  </head>
+
+  <body>
+    <main>
+      <h1>Frontend</h1>
+      <div class="lesson-container">
+        <a class="lesson-link" href="./lessons/lesson_06/index.html">Lesson 06: flexbox</a>
+        <a class="lesson-link" href="./lessons/lesson_07/index.html">Lesson 07: grid</a>
+        <a class="lesson-link" href="./lessons/lesson_08/index.html">Lesson 08: css tricks</a>
+      </div>
+    </main>
+  </body>
+
 </html>
