--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
     <main>
       <h1>Frontend</h1>
       <div class="lesson-container">
+        <a class="lesson-link" href="./homeworks/homework_10/index.html">Homework 10: magic buttons</a>
         <a class="lesson-link" href="./lessons/lesson_06/index.html">Lesson 06: flexbox</a>
         <a class="lesson-link" href="./lessons/lesson_07/index.html">Lesson 07: grid</a>
         <a class="lesson-link" href="./lessons/lesson_08/index.html">Lesson 08: css tricks</a>
+        <a class="lesson-link" href="./lessons/lesson_09/index.html">Lesson 09: Berlin project</a>
+        <a class="lesson-link" href="./lessons/lesson_10/index.html">Lesson 10: DOM methods</a>
+        <a class="lesson-link" href="./lessons/lesson_11/index.html">Lesson 11: JS basics</a>
+        <a class="lesson-link" href="./lessons/lesson_12/index.html">Lesson 12: Arrays</a>
+        <a class="lesson-link" href="./lessons/lesson_18/index.html">Lesson 18: Fetch requests</a>
+        <a class="lesson-link" href="./lessons/lesson_19/index.html">Lesson 19: Fetch practice</a>
+        <a class="lesson-link" href="./lessons/lesson_20/index.html">Lesson 20: Weather App 🌤️</a>
       </div>
     </main>
   </body>
